# DESLib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  debug_conditional  debug_jumps  debug_memory  debug_vm_memory  dez.c  test.asm  test_cmp_debug  test_div_zero_debug  test_jz_debug  test_jz_no_jump  test_jz_simple
examples/: example1.cpp  example2.cpp  example3.cpp  hello_world.asm  plot.py
examples/data/: circadian_clock_dde.csv  lorenz.csv  robertson_rossenbrock.csv
include/: DES.hpp  assembly_vm.h  des.h  des_adaptive.hpp  des_dense_output.hpp  des_linear_chain.hpp  des_structs.h  dez_vm_types.h  history.hpp  vm_errors.h  vm_hash_table.h  vm_instruction_printer.h  vm_utils.h  vm_validation.h
include/Methods/: des_adaptive.hpp  des_adaptive.ipp  des_base.hpp  des_base.ipp  des_dopri54.hpp  des_dopri87.hpp  des_rossenbrock.hpp  rk4.h  rk45.h
include/utils/: des_io.hpp  des_utils.hpp
src/: assembly_vm.c  des.c  main.c  vm_errors.c  vm_hash_table.c  vm_instruction_printer.c  vm_utils.c  vm_validation.c
src/assembler/: asm.c  dez_assembler.c  dez_assembler.h  dez_lexer.c  dez_lexer.h  dez_parser.c  dez_parser.h  dez_symbol_table.c  dez_symbol_table.h
src/core/: dez_disasm.c  dez_disasm.h  dez_instruction_table.c  dez_instruction_table.h  dez_memory.c  dez_memory.h  dez_vm.c  dez_vm.h
tests/: performance_test.c  test_arithmetic.c  test_assembly.c  test_cmp_debug.c  test_control_flow.c  test_core.c  test_debug_cmp.c  test_div_zero_debug.c  test_errors.c  test_jumps.c  test_jumps_debug.c  test_jz_debug.c  test_jz_no_jump.c  test_jz_simple.c  test_math.c  test_memory.c  test_memory_ops.c  test_mov.c  test_performance.c  test_simple_jump.c  test_stack.c  test_strings.c  test_system.c  test_vm.c
tests/asm/: control_flow.asm  debug_memory.asm  large_memory_test.asm  math.asm  memory.asm  nested_subroutines.asm  ret_error_test.asm  stack.asm  strings.asm  subroutine.asm  test_basic.s  test_bitwise.s  test_comments.s  test_comprehensive.s  test_conditional.s  test_functions.s  test_jumps.s  test_labels.s  test_load.s  test_loop.s  test_memory.s  test_mixed.s  test_stack.s  test_system.s
tools/: asm.c  disasm.c  disasm_tool.c  objdump.c
